cmake_minimum_required(VERSION 3.13)
project(sorting)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(src)
include_directories(target)

add_executable(sorting
        src/heap_sort.rs
        src/lib.rs
        src/main.rs
        target/debug/deps/libsorting-85a38affb727c899.rmeta
        target/debug/deps/libsorting-bfec166d2c1c697d.rmeta
        target/debug/deps/sorting-85a38affb727c899.d
        target/debug/deps/sorting-bfec166d2c1c697d.d
        target/debug/incremental/sorting-3ksf1mignkn76/s-fag53pvqe1-15ricro-1mxbiiaw7d0c9/dep-graph.bin
        target/debug/incremental/sorting-3ksf1mignkn76/s-fag53pvqe1-15ricro-1mxbiiaw7d0c9/query-cache.bin
        target/debug/incremental/sorting-3ksf1mignkn76/s-fag53pvqe1-15ricro-1mxbiiaw7d0c9/work-products.bin
        target/debug/incremental/sorting-3ksf1mignkn76/s-fag53pvqe1-15ricro.lock
        target/debug/incremental/sorting-3vtmqbkmxcr85/s-fag53ptp8m-jqh1d0-ibj8kk5cxp31/dep-graph.bin
        target/debug/incremental/sorting-3vtmqbkmxcr85/s-fag53ptp8m-jqh1d0-ibj8kk5cxp31/query-cache.bin
        target/debug/incremental/sorting-3vtmqbkmxcr85/s-fag53ptp8m-jqh1d0-ibj8kk5cxp31/work-products.bin
        target/debug/incremental/sorting-3vtmqbkmxcr85/s-fag53ptp8m-jqh1d0.lock
        target/rls/debug/deps/libsorting-188076e524297a6c.rmeta
        target/rls/debug/deps/libsorting-5761688e8bb3d185.rmeta
        target/rls/debug/deps/libsorting-85a38affb727c899.rmeta
        target/rls/debug/deps/libsorting-bfec166d2c1c697d.rmeta
        target/rls/debug/deps/sorting-188076e524297a6c.d
        target/rls/debug/deps/sorting-5761688e8bb3d185.d
        target/rls/debug/deps/sorting-85a38affb727c899.d
        target/rls/debug/deps/sorting-bfec166d2c1c697d.d
        target/rls/debug/incremental/sorting-2p2flzzivmu9w/s-fagoyh8jx7-8eh98l-1gwxhamgzrb6g/dep-graph.bin
        target/rls/debug/incremental/sorting-2p2flzzivmu9w/s-fagoyh8jx7-8eh98l-1gwxhamgzrb6g/query-cache.bin
        target/rls/debug/incremental/sorting-2p2flzzivmu9w/s-fagoyh8jx7-8eh98l-1gwxhamgzrb6g/work-products.bin
        target/rls/debug/incremental/sorting-2p2flzzivmu9w/s-fagoyh8jx7-8eh98l.lock
        target/rls/debug/incremental/sorting-3ksf1mignkn76/s-fagoyhaugh-1ne7tn6-2czb1y23iels7/dep-graph.bin
        target/rls/debug/incremental/sorting-3ksf1mignkn76/s-fagoyhaugh-1ne7tn6-2czb1y23iels7/query-cache.bin
        target/rls/debug/incremental/sorting-3ksf1mignkn76/s-fagoyhaugh-1ne7tn6-2czb1y23iels7/work-products.bin
        target/rls/debug/incremental/sorting-3ksf1mignkn76/s-fagoyhaugh-1ne7tn6.lock
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fag95gxmoj-1smznig-3p6qysuzcwh0/dep-graph.bin
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fag95gxmoj-1smznig-3p6qysuzcwh0/query-cache.bin
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fag95gxmoj-1smznig-3p6qysuzcwh0/work-products.bin
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoybqsxj-gq4otb-working/dep-graph.bin
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoybqsxj-gq4otb-working/query-cache.bin
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoybqsxj-gq4otb-working/work-products.bin
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoyc5xwa-h3pd4l-working/dep-graph.bin
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoyc5xwa-h3pd4l-working/query-cache.bin
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoyc5xwa-h3pd4l-working/work-products.bin
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoycursw-6ie2w-working/dep-graph.bin
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoycursw-6ie2w-working/query-cache.bin
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoycursw-6ie2w-working/work-products.bin
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoyd9zdk-1actw8a-working/dep-graph.bin
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoyd9zdk-1actw8a-working/query-cache.bin
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoyd9zdk-1actw8a-working/work-products.bin
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoydshca-1vjd0g4-working/dep-graph.bin
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoydshca-1vjd0g4-working/query-cache.bin
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoydshca-1vjd0g4-working/work-products.bin
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoyebp5y-16bcwc5-working/dep-graph.bin
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoyebp5y-16bcwc5-working/query-cache.bin
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoyebp5y-16bcwc5-working/work-products.bin
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoyhd9kf-1wyyf8w-working/dep-graph.bin
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoyhd9kf-1wyyf8w-working/query-cache.bin
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoyhd9kf-1wyyf8w-working/work-products.bin
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fag95gxmoj-1smznig.lock
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoybqsxj-gq4otb.lock
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoyc5xwa-h3pd4l.lock
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoycursw-6ie2w.lock
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoyd9zdk-1actw8a.lock
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoydshca-1vjd0g4.lock
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoyebp5y-16bcwc5.lock
        target/rls/debug/incremental/sorting-3r7kv1l99mggq/s-fagoyhd9kf-1wyyf8w.lock
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fag96i03vz-1qri63s-1f17gw2ay5jru/dep-graph.bin
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fag96i03vz-1qri63s-1f17gw2ay5jru/query-cache.bin
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fag96i03vz-1qri63s-1f17gw2ay5jru/work-products.bin
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoybtsg2-105z2y-working/dep-graph.bin
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoybtsg2-105z2y-working/query-cache.bin
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoybtsg2-105z2y-working/work-products.bin
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoyc92ts-kc7rxg-working/dep-graph.bin
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoyc92ts-kc7rxg-working/query-cache.bin
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoyc92ts-kc7rxg-working/work-products.bin
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoycpp6l-11eq5a0-working/dep-graph.bin
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoycpp6l-11eq5a0-working/query-cache.bin
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoycpp6l-11eq5a0-working/work-products.bin
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoyd4t91-1n8mb2l-working/dep-graph.bin
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoyd4t91-1n8mb2l-working/query-cache.bin
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoyd4t91-1n8mb2l-working/work-products.bin
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoydvhon-1m8knzg-working/dep-graph.bin
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoydvhon-1m8knzg-working/query-cache.bin
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoydvhon-1m8knzg-working/work-products.bin
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoyeene9-zwz0s7-working/dep-graph.bin
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoyeene9-zwz0s7-working/query-cache.bin
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoyeene9-zwz0s7-working/work-products.bin
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoyh5ous-7bhvjw-working/dep-graph.bin
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoyh5ous-7bhvjw-working/query-cache.bin
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoyh5ous-7bhvjw-working/work-products.bin
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fag96i03vz-1qri63s.lock
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoybtsg2-105z2y.lock
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoyc92ts-kc7rxg.lock
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoycpp6l-11eq5a0.lock
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoyd4t91-1n8mb2l.lock
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoydvhon-1m8knzg.lock
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoyeene9-zwz0s7.lock
        target/rls/debug/incremental/sorting-3vtmqbkmxcr85/s-fagoyh5ous-7bhvjw.lock
        Cargo.lock
        Cargo.toml)
